remove min-height property for .section-content elements to ensure sections do not appear too large on some screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -152,7 +152,7 @@ header a {
 
 .section-content {
     padding: 0px 100px 40px 300px;
-    min-height: 100vh;
+    /* min-height: 100vh; */
 }
 
 /*-- SECTION: ABOUT ME --*/
